 - Resprited all existing icons from 24px to 32px. Changed many icons of existing items.
 - Overhauled the equip comparison menu.
 - The pub/tavern has been rebranded as The Tipsy Oyster! Barkeep's name has been revealed to be Jeremy, and all of his establishments have been redesigned (except for the original in Haven Harbor).
 - Skill families will now be condensed into a single dropdown.
 - Fleshed out the salvaging system, making many items throughout the game now salvageable.
 - Leveling up will also remove all debuffs.
 - Many shop stocks and enemy drop pools have been modified.
 - Increased all ore mining drop ranges by 1 on both bounds (e.g. copper ore now drops 3-5 copper clusters instead of the old 2-4).
 - Being defeated by a Lost Soul in the Great Pyramid will now send you back to the start of the dungeon instead of giving a game over.
 - Many food-related items have been made renewable, and as a result are no longer sold by Dalia.
 - The new Speedster Boots have replaced the spot in boot progression once held by the Hermes Boots. The Hermes Boots have been moved up to be crafted near the end of Telluria Field's progression.
 - Solus Town now automatically becomes snowy during the holiday season.
 - Presents now have a 50% drop chance on December 25th rather than the default 20%.
 - Countless (and I mean COUNTLESS) other small changes have been made throughout the game (not as much as Alpha 14, but honestly, it's probably close).
 - A huge amount of backend reworks/changes have been made to improve performance, consistency, and development efficiency.

Music Update (Final Wave):
 - Redid "New Lands", "Winding Labyrinth".
 - Updated "Inevitable Confrontation".

Item/Equipment Balancing:
 - Heavily nerfed the recovery of the Potion, Elixir, and Ether.
  ~ Potion's HP recovery was reduced from 90 to 60, and Elixir's MP recovery was reduced from 36 to 24.