@@ -57,11 +57,6 @@
         "skillId": 6
       },
       {
-        "level": 11,
-        "note": "Alpha 14",
-        "skillId": 52
-      },
-      {
         "level": 12,
         "note": "Alpha 12",
         "skillId": 30
