@@ -337,6 +337,7 @@ Changes:
  - Resprited all existing icons from 24px to 32px. Changed many icons of existing items.
  - Overhauled the equip comparison menu.
  - The pub/tavern has been rebranded as The Tipsy Oyster! Barkeep's name has been revealed to be Jeremy, and all of his establishments have been redesigned (except for the original in Haven Harbor).
+ - Cut Down is no longer learned by Player 1 at level 11 and is instead provided by equipping any axe.
  - Skill families will now be condensed into a single dropdown.
  - Fleshed out the salvaging system, making many items throughout the game now salvageable.
  - Leveling up will also remove all debuffs.
